<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/current_weather_general_padding">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_city_country_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/city_name_current_margin_top"
                android:textSize="@dimen/city_name_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Montevideo, UR" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_condition_icon"
                android:layout_width="@dimen/condition_icon_width"
                android:layout_height="@dimen/condition_icon_height"
                android:layout_marginTop="@dimen/condition_icon_margin_top"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_city_country_name"
                tools:background="@drawable/ic_location" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/condition_status_margin_top"
                android:textSize="@dimen/condition_status_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_condition_icon"
                tools:text="Clear" />

            <LinearLayout
                android:id="@+id/ll_temperature_humidity"
                android:layout_width="@dimen/full_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/temperature_humidity_margin_top"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_condition">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_temperature"
                    android:layout_width="@dimen/current_weather_card_width"
                    android:layout_height="@dimen/current_weather_card_height"
                    android:layout_margin="@dimen/current_weather_card_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/temperature"
                            android:textSize="@dimen/current_weather_card_label_font_size"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/current_weather_card_info_font_size"
                            android:textStyle="bold"
                            tools:text="36°C" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_temperature_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/current_weather_card_secondary_info_font_size"
                            tools:text="Min: 23°C" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_temperature_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/current_weather_card_secondary_info_font_size"
                            tools:text="Max: 37°C" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_humidity"
                    android:layout_width="@dimen/current_weather_card_width"
                    android:layout_height="@dimen/current_weather_card_height"
                    android:layout_margin="@dimen/current_weather_card_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="@dimen/current_weather_card_label_font_size"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/current_weather_card_info_font_size"
                            android:textStyle="bold"
                            tools:text="39%" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pressure_wind"
                android:layout_width="@dimen/full_width"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_temperature_humidity">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_pressure"
                    android:layout_width="@dimen/current_weather_card_width"
                    android:layout_height="@dimen/current_weather_card_height"
                    android:layout_margin="@dimen/current_weather_card_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/pressLab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="@dimen/current_weather_card_label_font_size"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/current_weather_card_info_font_size"
                            android:textStyle="bold"
                            tools:text="1005.18 hPa" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_wind"
                    android:layout_width="@dimen/current_weather_card_width"
                    android:layout_height="@dimen/current_weather_card_height"
                    android:layout_margin="@dimen/current_weather_card_margin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/windLab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textSize="@dimen/current_weather_card_label_font_size"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tv_wind_speed_degrees"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="@dimen/current_weather_card_info_font_size"
                            android:textStyle="bold"
                            tools:text="12.40mps 17.5º" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
